--- a/index.css
+++ b/index.css
@@ -64,26 +64,112 @@
     padding: 0;
 }
 
+body{
+    background-image: url(assets/images/ondas\ com\ fundo\ transparente.png);
+    background-color: rgb(90, 90, 90);
+}
+
 .site{
-    display: flex;
-    flex-wrap: nowrap;
+    /* display: flex; */
+    /* flex-wrap: nowrap; */
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .titulo-site{
     font-family: Aller-regular;
     position: absolute;
+    width: 300px;
+    text-align: center;
+    margin: 30px 0 0 0;
 }
 
 .navegador{
     display: flex;
-    background-color: #a3a3a3;
-    width: 250px;
+    background-color: #a3a3a37c;
+    width: 300px;
     height: 100vh;
+    justify-content: center;
+    text-decoration: none;
+    position: fixed;
 }
 
 .lista{
-    align-self: center;
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    
 }
+
+.item-lista{
+    
+}
+
+.link{
+    font-family: aller-regular;
+    width: 160px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    background-color: #74747400;
+    margin: 10px;
+    padding: 12px;
+    border: 3px solid black;
+    border-radius: 50px;
+    text-decoration: none;
+    color: black;
+}
+
+.link:hover{
+    width: 200px;
+    height: 22px;
+    transition: 200ms;
+    font-size: 19px;
+    background-color: white;
+    color: black;
+    border: 3px solid white;
+
+}
+
+.corpo-site{
+    left: 300px;
+    display: flex;
+    position: relative;
+    height: 100vh;
+}
+
+.conteudo-topico{
+}
+
+.titulo-topico{
+    font-family: aller-bold;
+    font-size: 60px;
+    text-align: center;
+    margin: 40px ;
+}
+
+.card{
+    background-color: #dadada;
+    border-radius: 50px;
+    margin: 40px;
+    width: 72vw;
+    /* pq diabos eu tenho que botar exatamente 72? pq eu não poderia colocar isso na div corpo site*/
+    height: 70vh;
+    display: flex;
+}
+
+.card>p{
+    text-align: justify;
+    margin: 50px;
+
+}
+
+
+
 
 
 
