Esqueleto do site

--- a/index.css
+++ b/index.css
@@ -104,9 +104,9 @@ body{
     
 }
 
-.item-lista{
+/* .item-lista{
     
-}
+} */
 
 .link{
     font-family: aller-regular;
@@ -142,8 +142,8 @@ body{
     height: 100vh;
 }
 
-.conteudo-topico{
-}
+/* .conteudo-topico{
+} */
 
 .titulo-topico{
     font-family: aller-bold;
