--- a/index.css
+++ b/index.css
@@ -65,47 +65,49 @@
 }
 
 body{
-    background-image: url(assets/images/ondas\ com\ fundo\ transparente.png);
-    background-color: rgb(90, 90, 90);
+    /* background-image: url(assets/images/ondas\ com\ fundo\ transparente.png); */
+    /* background-color: rgb(90, 90, 90); */
 }
 
-.site{
+/* .site{
     overflow-x: auto;
     overflow-y: hidden;
-}
+} */
 
-.titulo-site{
+/* .titulo-site{
     font-family: Aller-regular;
     position: absolute;
     width: 300px;
     text-align: center;
     margin: 30px 0 0 0;
-}
+} */
 
 .navegador{
     display: flex;
-    background-color: #a3a3a37c;
-    width: 300px;
-    height: 100vh;
+    /* background-color: #a3a3a37c; */
+    width: 100vw;
+    height: 60px;
     justify-content: center;
     text-decoration: none;
     position: fixed;
+    align-items: center;
 }
 
 .lista{
+    justify-content: center;
     list-style-type: none;
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    
 }
 
 /* .item-lista{
     
 } */
 
+/* :root {
+    --primary-color: #7a60c5;
+
+} */
 .link{
     font-family: aller-regular;
     width: 160px;
@@ -114,56 +116,28 @@ body{
     justify-content: center;
     align-self: center;
     background-color: #74747400;
-    margin: 10px;
-    padding: 12px;
+    margin: 7px;
+    padding: 7px 5px 5px 5px;
     border: 3px solid black;
     border-radius: 50px;
     text-decoration: none;
     color: black;
+    font-size: 14px;
+    transition: 300ms;
 }
 
 .link:hover{
     width: 200px;
     height: 22px;
-    transition: 200ms;
-    font-size: 19px;
+    transition: 300ms;
+    font-size: 17px;    
     background-color: white;
     color: black;
     border: 3px solid white;
-
 }
 
 .corpo-site{
-    left: 300px;
     display: flex;
-    position: relative;
-    height: 100vh;
-}
-
-/* .conteudo-topico{
-} */
-
-.titulo-topico{
-    font-family: aller-bold;
-    font-size: 60px;
-    text-align: center;
-    margin: 40px ;
-}
-
-.card{
-    background-color: #dadada;
-    border-radius: 50px;
-    margin: 40px;
-    width: 72vw;
-    /* pq diabos eu tenho que botar exatamente 72? pq eu não poderia colocar isso na div corpo site*/
-    height: 70vh;
-    display: flex;
-}
-
-.card>p{
-    text-align: justify;
-    margin: 50px;
-
 }
 
 
