--- a/index.css
+++ b/index.css
@@ -84,19 +84,24 @@ body{
 
 .navegador{
     display: flex;
-    /* background-color: #a3a3a37c; */
+    background-color: #a3a3a37c;
     width: 100vw;
-    height: 60px;
+    height: 8vh;
     justify-content: center;
     text-decoration: none;
     position: fixed;
     align-items: center;
 }
 
+.logo{
+    width: 13vw;
+    margin: 0 20px;
+}
+
 .lista{
     justify-content: center;
     list-style-type: none;
-    width: 100%;
+    width: 100vw;
     display: flex;
 }
 
@@ -110,7 +115,7 @@ body{
 } */
 .link{
     font-family: aller-regular;
-    width: 160px;
+    width: 14vw;
     height: 20px;
     display: flex;
     justify-content: center;
@@ -123,11 +128,11 @@ body{
     text-decoration: none;
     color: black;
     font-size: 14px;
-    transition: 300ms;
+    transition: 500ms;
 }
 
 .link:hover{
-    width: 200px;
+    width: 12vw;
     height: 22px;
     transition: 300ms;
     font-size: 17px;    
