--- a/index.css
+++ b/index.css
@@ -375,6 +375,7 @@
 }
 
 .titulo-marca{
+    background-image: url(./assets/images/ONDAS\ 2.png);
     width: 100%;
     height: 900px;
     padding: 50px;
@@ -713,11 +714,15 @@
     width: 90vw;
     height: 500px;
     margin: 0 auto;
+    background-image: url(./assets/images/ONDAS\ 2.png);
+
     /* background-image: url(./assets/images/ondas\ com\ fundo\ transparente.png); */
 
 }
 .elementos{
-    width: 90vw;
+    background-image: url(./assets/images/ONDAS\ 2.png);
+    width: 100%;
+    height: 900px;
     padding: 50px;
     display: flex;
     align-items: center;
@@ -732,7 +737,8 @@
 .parte3-grupo2{
     display: flex;
     width: 90vw;
-    margin: 40px auto;
+    margin: 0 auto;
+
 }
 .tipografia, .exemplo-tipografia{
     color: white;
@@ -881,14 +887,14 @@
     height: 600px;
     margin: 0 auto;
 }
-.titulo-sound{
+.titulo-secao{
     width: 100%;
     padding: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.titulo-sound > h1{
+.titulo-secao > h1{
     font-family: "Aller-bold";
     font-size: 60px;
     padding: 15px;
